vpc-networking.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  VPC, IGW ,subnets and routing.

Parameters:

  ParentStack:
    Description: Parent stack name
    Type: String
    AllowedPattern: '^[a-zA-Z][-a-zA-Z0-9]*$'
  AppName:
    Description: Application name
    Type: String
  VpcCidr:
    Description: VPC Cidr that allows the creation of 4 subnets with /27 mask 
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 172.31.0.0/16
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  
Resources:

  # -------------------- VPC + Subnets ------------------- #

  # VPC
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-VPC

  # Internet gateway
  Igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-VPC

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref Igw

  # Public subnet 1
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: 
        !Select 
          - 0
          - Fn::GetAZs:
              !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock:
        !Select
          - 0
          - !Cidr
            - !Ref VpcCidr
            - 4 # Number of blocks
            - 5 # Subnet mask "/27"
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-Public-Subnet-1
  
  # Public subnet 2
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: 
        !Select 
          - 1
          - Fn::GetAZs:
              !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock:
        !Select
          - 1
          - !Cidr
            - !Ref VpcCidr
            - 4 # Number of blocks
            - 5 # Subnet mask "/27"
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-Public-Subnet-2

  # Private subnet 1
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: 
        !Select 
          - 0
          - Fn::GetAZs:
              !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock:
        !Select
          - 2
          - !Cidr
            - !Ref VpcCidr
            - 4 # Number of blocks
            - 5 # Subnet mask "/27"
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-Private-Subnet-1
  
  # Private subnet 2
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: 
        !Select 
          - 1
          - Fn::GetAZs:
              !Ref AWS::Region
      VpcId: !Ref Vpc
      CidrBlock:
        !Select
          - 3
          - !Cidr
            - !Ref VpcCidr
            - 4 # Number of blocks
            - 5 # Subnet mask "/27"
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-Private-Subnet-2

  # ------------------------ Route tables ----------------------- #

  # Public route table
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-Public-RT

  # Route to IGW
  IgwRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Igw

  # Private route table
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-Pivate-RT

  # ------------------ Route tables associations ------------------ #
  
  PublicRouteTableAssoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  
  PublicRouteTableAssoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PivateRouteTableAssoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable
  
  PivateRouteTableAssoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  # -------------------- Security groups ------------------- #

  PublicTierSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: PublicTierSecurityGroup
      GroupDescription: Public tier security group
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-Public-Tier-SG
  
  PrivateTierSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: PrivateTierSecurityGroup
      GroupDescription: Private tier security group
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-Private-Tier-SG

  # Security group ingress rules
  PublicSGIngressEphemeralTcp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref PublicTierSecurityGroup
      SourceSecurityGroupId: !Ref PrivateTierSecurityGroup
      IpProtocol: tcp
      FromPort: 32768
      ToPort: 61000
  
  PrivateSGIngressHttpTcp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref PrivateTierSecurityGroup
      SourceSecurityGroupId: !Ref PublicTierSecurityGroup
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
  
Outputs:

  Vpc:
    Value: !Ref Vpc
    Export: 
      Name: !Sub ${AppName}-${ParentStack}-VPC
  PublicSubnet1:
    Value: !Ref PublicSubnet1
    Export: 
      Name: !Sub ${AppName}-${ParentStack}-Public-Subnet-1
  PublicSubnet2:
    Value: !Ref PublicSubnet1
    Export: 
      Name: !Sub ${AppName}-${ParentStack}-Public-Subnet-2
  PrivateRouteTable: # For gateway routing later
    Value: !Ref PrivateRouteTable
    Export: 
      Name: !Sub ${AppName}-${ParentStack}-Private-RT
  PrivateTierSecurityGroup: # For bastion rules later
    Value: !Ref PrivateTierSecurityGroup
    Export: 
      Name: !Sub ${AppName}-${ParentStack}-Private-Tier-SG
